# cyber_rt_studying

./: .gitignore  CyberRT.pro  DockerFile  README.md  auto_build.sh  clear_build.sh  only_build_project.sh  set_proxy.sh
code/: .gitignore  CMakeLists.txt  README.md  README.md.old  set_env.sh  setup.bash  setup.zsh  start_env.sh
code/cyber/common/: global_data.cc  global_data.h
code/cyber/component/: component_wrapper.h  component说明文档.md
code/cyber/logger/: async_logger.cc  async_logger.h  log_file_object.cc  log_file_object.h  logger.cc  logger.h
code/cyber/mainboard/: module_controller.cc
code/cyber/message/: message_traits.h
code/cyber/node/: inode.h  node.h  node_channel_impl.h  node_wrapper.h  reader.h  writer.h
code/cyber/scheduler/: scheduler.cc
code/cyber/service_discovery/communication/: participant_listener.h  subscriber_listener.cc  subscriber_listener.h
code/cyber/service_discovery/specific_manager/: manager.cc
code/cyber/tools/: CMakeLists.txt
code/cyber/transport/rtps/: participant.cc  sub_listener.cc  sub_listener.h  underlay_message_type.cc  underlay_message_type.h
code/cyber/transport/transmitter/: hybrid_transmitter.h  intra_transmitter.h  rtps_transmitter.h  shm_transmitter.h
code/docs/协程/: 协程说明.md
code/env/: env_run.sh
code/examples/: CMakeLists.txt
code/examples/CyberRTReadWriteTest/: CyberRTReadWriteTest.pro  protoc.sh
code/examples/CyberRTReadWriteTest/src/: bussiness_data_info.pb.cc  bussiness_data_info.pb.h  bussiness_data_info.proto  bussiness_global.cpp  bussiness_global.h  bussiness_reader.cxx  bussiness_reader.h  bussiness_writer.cxx  bussiness_writer.h  main.cpp
code/examples/class01_test_mainboard/: CMakeLists.txt  README.md  reader_component.cc  reader_component.h  writer_component.cc  writer_component.h
code/examples/class01_test_mainboard/conf/: cyber.pb.conf
code/examples/class01_test_mainboard/dag/: class01_test_mainboard_reader.dag  class01_test_mainboard_writer.dag
code/examples/class01_test_mainboard/scripts/: start_class01_test_mainboard_reader_component.sh  start_class01_test_mainboard_reader_writer.sh  start_class01_test_mainboard_writer_component.sh  start_cyber_monitor.sh  start_writer_component.sh
code/examples/class02_test_callback/: CMakeLists.txt  README.md  custom_planning_component.cc  custom_planning_component.h  loc_component.cc  loc_component.h  planning_component.cc  planning_component.h
code/examples/class02_test_callback/dag/: class02_custom_planning.dag  class02_loc.dag  class02_planning.dag
code/examples/class02_test_callback/proto/: class02.pb.cc  class02.pb.h  class02.proto
code/examples/class02_test_callback/scripts/: start_class02_loc_component.sh  start_class02_planning_component.sh  start_class02_planning_loc.sh  start_custom_planning_component.sh
code/examples/class03_different_component/: CMakeLists.txt  Cyber调度关系说明.md
code/examples/class03_different_component/class01_empty_component/: CMakeLists.txt  README.md  loc_component.cc  loc_component.h  planning_component.cc  planning_component.h
code/examples/class03_different_component/class01_empty_component/conf/: cyber.pb.conf
code/examples/class03_different_component/class01_empty_component/dag/: class03_loc.dag  class03_planning.dag
code/examples/class03_different_component/class01_empty_component/proto/: class03.pb.cc  class03.pb.h  class03.proto
code/examples/class03_different_component/class01_empty_component/scripts/: start_class03_loc_component.sh  start_class03_planning_component.sh  start_class03_planning_loc.sh
code/examples/class03_different_component/class02_component_one_input/: CMakeLists.txt  loc_component.cc  loc_component.h  planning_component.cc  planning_component.h
code/examples/class03_different_component/class02_component_one_input/dag/: class02_loc.dag  class02_planning.dag
code/examples/class03_different_component/class02_component_one_input/scripts/: start_class02_loc_component.sh  start_class02_planning_component.sh  start_class02_planning_loc.sh
code/examples/class04_test_hack/: CMakeLists.txt
code/examples/class04_test_hack/class01_test_component_wrapper/: CMakeLists.txt  crtp_solution.md  planning_component.cc  planning_component.h
code/examples/class04_test_hack/class01_test_component_wrapper/proto/: class02.pb.cc  class02.pb.h
code/examples/class04_test_hack/class01_test_component_wrapper/scripts/: class01_test_component_wrapper.sh
install/: install_run.sh
install/examples/class01_test_mainboard/dag/: test_reader.dag  test_writer.dag
install/examples/class01_test_mainboard/scripts/: start_reader_component.sh  start_reader_writer.sh
